<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_gravity="center"
        android:textSize="@dimen/help"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="@dimen/padding_help_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/font_help_status"
                android:padding="@dimen/padding_help"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/recorded"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/font_help_status"
                android:padding="@dimen/padding_help"
                android:background="@color/app_default"
                android:layout_margin="@dimen/margin_help"
                android:textColor="@color/app_white"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploaded"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/font_help_status"
                android:padding="@dimen/padding_help"
                android:layout_margin="@dimen/margin_help"
                android:background="@color/app_orange"
                android:textColor="@color/app_white"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rejected"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/font_help_status"
                android:padding="@dimen/padding_help"
                android:layout_margin="@dimen/margin_help"
                android:background="@color/app_red"
                android:textColor="@color/app_white"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accepted"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/font_help_status"
                android:padding="@dimen/padding_help"
                android:layout_margin="@dimen/margin_help"
                android:background="@color/app_green"
                android:textColor="@color/app_white"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/locked"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/font_help_status"
                android:padding="@dimen/padding_help"
                android:layout_margin="@dimen/margin_help"
                android:background="@color/app_gray"
                android:textColor="@color/app_white"/>
            <Button
                android:id="@+id/btnCloseHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closeHelp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>