<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dialog_logo_padding_top"
            android:paddingBottom="@dimen/dialog_logo_padding_bottom"
            android:src="@drawable/accenteasy_icon_text"
            />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:text="@string/email_address"/>
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/hint_email_address"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="@dimen/dialog_button_margin_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/login"
            android:textSize="@dimen/dialog_button_text_size"
            android:textColor="@android:color/white"
            android:background="@color/app_green"
            android:gravity="center_horizontal|center_vertical"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtLostPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/lostpassword"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <TextView
        android:id="@+id/txtTermAndCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/txtTermCondition"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
</LinearLayout>